--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/clairyitinggu/ui#readme",
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "typescript": "^4.6.3",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   }
 }
